<resources>
    <string name="app_name">APP TEST</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email(登录不需要填写)</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_password">密码</string>
    <string name="login_userid">学号</string>
    <string name="login_username">用户名</string>
    <string name="login_register">注 册</string>
    <string name="login_login">登 录</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="email">邮箱</string>
    <string name="register">马上注册</string>
    <string name="username_cant_null">用户名不能为空！</string>
    <string name="password_cant_null">密码不能为空！</string>
    <string name="pwd_not_confirm">密码和确认密码不匹配！</string>
    <string name="email_cant_null">邮箱地址不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="inputId">请输入学号</string>
    <string name="inputUsername">请输入用户名</string>
    <string name="inputPassword">请输入密码</string>
    <string name="confirmPassword">请再次输入密码</string>
    <string name="userid_cant_null">学号不能为空！</string>
    <string name="number_only">只能输入数字！</string>
    <string name="user_welcome">欢迎！</string>
    <string name="balance_info">您的余额：</string>
    <string name="get_detail">明细查询</string>
    <string name="add_balance">余额充值</string>
    <string name="choose_operation">请选择操作：</string>
    <string name="your_money_remaining">您的余额为：</string>
    <string name="_0_yuan">0元</string>
    <string name="choose_money_to_deposit">请选择您要充值的金额：</string>
    <string name="_10_yuan">10元</string>
    <string name="_30_yuan">30元</string>
    <string name="_50_yuan">50元</string>
    <string name="_100_yuan">100元</string>
    <string name="exit_login">退出登录</string>
    <string name="cmcc_edu">CMCC_EDU</string>
    <string name="f_young">f_Young</string>
    <string name="njfu_wifi">NJFU_WiFi</string>
    <string name="choose_net_name">请选择你的网络：</string>
    <string name="choose_location">请选择你所在的位置：</string>
    <string name="building_nine">教九</string>
    <string name="building_five">教五</string>
    <string name="building_lib">图书馆</string>
    <string name="remember_me">记住我</string>
    <string name="automatic_login">自动登录</string>
    <string name="login_xyw">登录校园网</string>
    <string name="favorite">收藏</string>
    <string name="more">更多</string>
    <string name="app_intro">南林，你好</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">设置</string>
    <string name="settings_subtitle">一些小小的设置…</string>
    <string name="homepage">首页</string>
    <string name="developing">开发中</string>
    <string name="default_theme">默认主题</string>
</resources>